--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^3.3.2",
     "core-js": "^2.6.5",
     "jointjs": "^3.0.4",
     "vue": "^2.6.10",
